k8s/manifests/alpha/viken-no.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-flyt-data-service
  name: fint-flyt-data-service
spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    io.kompose.service: fint-flyt-data-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fint-flyt-data-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $token $upstream_http_authorization;
      proxy_set_header Authorization $token;
      proxy_pass_header Authorization;
spec:
  rules:
    - host: "viken-no-skjema.vigoiks.no"
      http:
        paths:
          - path: /api/kodeverk
            pathType: Prefix
            backend:
              service:
                name: fint-flyt-data-service
                port:
                  number: 8080
          - path: /api/sak
            pathType: Prefix
            backend:
              service:
                name: fint-flyt-data-service
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-flyt-data-service
  name: fint-flyt-data-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-flyt-data-service
  template:
    metadata:
      labels:
        io.kompose.service: fint-flyt-data-service
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        - image: fintlabsacr.azurecr.io/fint-flyt-data-service:dummy
          name: fint-flyt-data-service
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "2048Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
